Revision history for Fork-Event-Interval

0.04 UNREL
        - added examples/shared.pl, shared variable between all events and
          the parent

0.03    2016-10-16
        - removed restart(), and aliased it instead to start()
        - fixed issue in an already-running warn on start(), and added status()
          to check the running status of an event (closes #1)

0.02    2016-09-24
        - POD fixes

0.01    Date/time
        First version, released on an unsuspecting world.
