@@ -3,6 +3,10 @@ Revision history for Fork-Event-Interval
 0.04 UNREL
         - added examples/shared.pl, shared variable between all events and
           the parent
+        - major overhaul on PID handling which provided the ability to rework
+          status() to be much more reliable (and effective)
+        - we now set $SIG{CHLD}="IGNORE" to avoid defunct processes
+        - added Carp (croak) for all fatal errors
 
 0.03    2016-10-16
         - removed restart(), and aliased it instead to start()
